[package]
name = "crypto"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
license = "GPL-3.0"
description = "Crypto library in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona"
homepage = "https://github.com/kryptokrona/kryptokrona"
repository = "https://github.com/kryptokrona/kryptokrona.git"

[dependencies]
cc = "1.0.90"
libc = "0.2.153"

[build-dependencies]
cc = "1.0"
