[package]
name = "crypto"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
license = "BSD-3-Clause"
description = "Crypto library in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona"
homepage = "https://github.com/kryptokrona/kryptokrona"
repository = "https://github.com/kryptokrona/kryptokrona.git"
rust-version = "1.77.1"

[lib]
name = "crypto"
crate-type = ["staticlib"]

[dependencies]
cc = "1.0.90"
libc = "0.2.153"

[build-dependencies]
cc = "1.0"
