[package]
name = "wallet_api"
version = "0.2.0"
edition = "2021"
authors = [
    "Marcus Cvjeticanin <mjovanc@icloud.com>",
]
license = "GPL-3.0"
description = "Wallet API implementation in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona"
homepage = "https://github.com/kryptokrona/kryptokrona"
repository = "https://github.com/kryptokrona/kryptokrona.git"
include = ["LICENSE-GPL"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
clap = "4.5.4"
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.34.0", features = ["tokio1"] }