[package]
name = "wallet_api"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
license = "GPL-3.0"
description = "Wallet API implementation in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona"
homepage = "https://github.com/kryptokrona/kryptokrona"
repository = "https://github.com/kryptokrona/kryptokrona.git"

[dependencies]
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.34.0", features = ["full"] }
rand = "0.8.5"
tracing = { version = "0.1" }
opentelemetry = { version = "0.22.0" }
opentelemetry-jaeger = { version = "0.21.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
opentelemetry_sdk = "0.22.1"
