[package]
name = "wallet_api"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
license = "BSD-3-Clause"
description = "Wallet API implementation in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona"
homepage = "https://github.com/kryptokrona/kryptokrona"
repository = "https://github.com/kryptokrona/kryptokrona.git"
rust-version = "1.77.1"

[[bin]]
name = "wallet_api"
path = "src/main.rs"

[dev-dependencies]
core = { path = "../core" }

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11.0"
tonic-reflection = "0.11.0"
prost = "0.12.3"
prost-types = "0.12"
tracing = { version = "0.1" }
cc = "1.0.90"
libc = "0.2.153"

[build-dependencies]
tonic-build = "0.11"
