[package]
name = "wallet_backend"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
license = "BSD-3-Clause"
description = "Wallet Backend implementation in Rust."
documentation = "https://github.com/kryptokrona/kryptokrona"
homepage = "https://github.com/kryptokrona/kryptokrona"
repository = "https://github.com/kryptokrona/kryptokrona.git"
rust-version = "1.77.1"

[lib]
name = "walletbackend"
crate-type = ["staticlib"]
